--- a/package.json
+++ b/package.json
@@ -51,8 +51,11 @@
         "date-fns": "4.1.0",
         "embla-carousel-react": "8.5.1",
         "framer-motion": "^12.23.24",
+        "html5-qrcode": "^2.3.8",
         "input-otp": "1.4.1",
         "jose": "^6.0.12",
+        "jsbarcode": "^3.12.1",
+        "jspdf": "^3.0.4",
         "lucide-react": "^0.454.0",
         "next": "15.2.4",
         "next-themes": "^0.4.4",
